--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
 		"svelte-check": "^4.3.4",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.6"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.10",
+		"mdsvex": "^0.12.6",
+		"shiki": "^3.20.0"
 	}
 }
