feat: Initialize blog with new posts, utilities, components, and configuration updates.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"copy-images": "node scripts/copy-post-images.js",
+		"dev": "npm run copy-images && vite dev",
+		"build": "npm run copy-images && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
